<package>
	<name>mav_msgs</name>
	<version>1.0.0</version>
	<description>
    		This package is mav_msgs. A catkinized version of the mav_tools: https://github.com/ccny-ros-pkg/mav_tools 
	</description>
	<author email="jl.sanchez@upm.es">Ivan Dryanovski, William Morris</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/mav_msgs</url>

  	<buildtool_depend>catkin</buildtool_depend>

	
	<build_depend>message_generation</build_depend>
  	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>


        <export></export>

</package>


